reactive spring security

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -13,7 +13,7 @@ logging:
   
 spring:
  main:
-    web-application-type: reactive
+#    web-application-type: reactive
     allow-bean-definition-overriding: true
     
  application:
