--- a/user-microservice/src/main/resources/application-dev.properties
+++ b/user-microservice/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 server.port=8085
 #server.servlet.context-path=/usermicro
 
+spring.main.allow-bean-definition-overriding: true
+
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3307/ecommicro?createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
